# GlacierCTF2022

./: README.md
crypto/ChaCha60/: README.md  attack.py  bruteforce.pyx  flag.txt  make_matrix.py  miniwriteup.md  pyximportcpp.py  requirements.txt
crypto/crypto_store/: Dockerfile  Readme.md
crypto/crypto_zeski/: README.md  out.txt  secret.py  sol.sage
crypto/simple_crypto/: README.md  challenge.yml  generator.py  solver.py
crypto/strange_letters/: README.md  challenge.yml
hardware/stack_math/: Dockerfile  README.md
misc/clip_rip/: Dockerfile  README.md  docker-compose.yml  solve.py
misc/clip_rip/wlclipmgr/: clipboard.cpp  clipboard.hpp  compile_commands.json  gpgmeinterface.cpp  gpgmeinterface.hpp  main.cpp  meson.build  procblock.cpp  procblock.hpp  util.hpp
misc/fuzzy_dungeon/: Dockerfile  README.md  docker-compose.yml  dungeon.cpp  dungeon.h  dungeon_exec  solve.py  writeup.txt
misc/size_matters/: README.md
misc/the_climber/: README.md
pwn/break_the_calculator/: Dockerfile  README.md  docker-compose.yml
pwn/clip_rip2/: README.md  solve.py
pwn/filer/: Readme.md
pwn/filer/app/: FILE-er.c  (+4 more)
pwn/old_dayz/: Readme.md
rev/sandboxer/: Dockerfile  README.md  run-container.sh
rev/wats_up/: readme.md
web/flagcoin/: .env  Readme.md  docker-compose.yml  exploit.py  package-lock.json
web/flagcoin2/: Readme.md
web/rce_as_a_service_stage1/: Dockerfile  README.md  build_and_start.sh  curl.org  flag.txt  solve.sh
web/rce_as_a_service_stage2/: RCEaaS.csproj  RCEaaS.sln  README.md  build_and_start_stage2.sh  curl_stage2.org  flag.txt  solve.py
(+93 files in other folders)
